--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,12 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  background-color: rgb(207, 210, 213);
 }
 
 .main-container {
   width: 100%;
-  padding: 20px;
   text-align: center;
-  background-color: aqua;
 }
 
 .listItems {
