--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
   margin: 0;
   background-color: rgb(207, 210, 213);
@@ -10,6 +7,7 @@ body {
 .main-container {
   width: 100%;
   text-align: center;
+  margin-top: 5em;
 }
 
 .listItems {
@@ -25,6 +23,11 @@ body {
   text-decoration: line-through; /* Apply line-through style to checked items */
 }
 @media only screen and (min-width: 1366px) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .main-container {
     border: 1px solid black;
     width: 100%;
